// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render active for blogs 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div
    className={undefined}
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="#/"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </a>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          indexFiles={true}
          setSearchResults={[Function]}
        />
        <DocsLink
          className={false}
        />
        <BlogLink
          className="is-active"
        />
        <GithubLink
          githubURL={null}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`renders githubURL 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div
    className={undefined}
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="#/"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </a>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          indexFiles={true}
          setSearchResults={[Function]}
        />
        <DocsLink
          className="is-active"
        />
        <BlogLink
          className={false}
        />
        <GithubLink
          githubURL="https://github.com/sindresorhus/cows"
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`renders logo 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div
    className={undefined}
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="#/"
      >
        <img
          alt="logo"
          className="navbar-item"
          src="https://github.com/sindresorhus/cows"
        />
        <span
          className="is-hidden-mobile navbar-item"
        />
      </a>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          indexFiles={true}
          setSearchResults={[Function]}
        />
        <DocsLink
          className="is-active"
        />
        <BlogLink
          className={false}
        />
        <GithubLink
          githubURL={null}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`renders nav items 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div
    className={undefined}
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="#/"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </a>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          indexFiles={true}
          setSearchResults={[Function]}
        />
        <NavItem
          githubURL={undefined}
          item={
            Array [
              "root",
              "/",
            ]
          }
          location={
            Object {
              "pathname": "/",
            }
          }
          logo={undefined}
          navItems={
            Object {
              "Doc 1": "/",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
          title={undefined}
        />
        <NavItem
          githubURL={undefined}
          item={
            Array [
              "Doc 1",
              "/",
            ]
          }
          location={
            Object {
              "pathname": "/",
            }
          }
          logo={undefined}
          navItems={
            Object {
              "Doc 1": "/",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
          title={undefined}
        />
        <NavItem
          githubURL={undefined}
          item={
            Array [
              "Doc 2",
              "pages",
            ]
          }
          location={
            Object {
              "pathname": "/",
            }
          }
          logo={undefined}
          navItems={
            Object {
              "Doc 1": "/",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
          title={undefined}
        />
        <BlogLink
          className={false}
        />
        <GithubLink
          githubURL={null}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`renders nav items with just a index 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div
    className={undefined}
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="#/"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </a>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          indexFiles={true}
          setSearchResults={[Function]}
        />
        <NavItem
          githubURL={undefined}
          item={
            Array [
              "root",
              "/",
            ]
          }
          location={
            Object {
              "pathname": "/foo",
            }
          }
          logo={undefined}
          navItems={
            Object {
              "Doc 1": "other/index.md",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
          title={undefined}
        />
        <NavItem
          githubURL={undefined}
          item={
            Array [
              "Doc 1",
              "other/index.md",
            ]
          }
          location={
            Object {
              "pathname": "/foo",
            }
          }
          logo={undefined}
          navItems={
            Object {
              "Doc 1": "other/index.md",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
          title={undefined}
        />
        <NavItem
          githubURL={undefined}
          item={
            Array [
              "Doc 2",
              "pages",
            ]
          }
          location={
            Object {
              "pathname": "/foo",
            }
          }
          logo={undefined}
          navItems={
            Object {
              "Doc 1": "other/index.md",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
          title={undefined}
        />
        <BlogLink
          className={false}
        />
        <GithubLink
          githubURL={null}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`renders title 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div
    className={undefined}
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="#/"
      >
        <span
          className="is-hidden-mobile navbar-item"
        >
          Super Cool Docs
        </span>
      </a>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          indexFiles={true}
          setSearchResults={[Function]}
        />
        <DocsLink
          className="is-active"
        />
        <BlogLink
          className={false}
        />
        <GithubLink
          githubURL={null}
        />
      </div>
    </div>
  </div>
</nav>
`;
